--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "name": "yunrap"
     },
     "scripts": {
+        "build": "pnpm run clean && vite build --config vite.config.mts && pnpm run build:dts",
+        "build:dts": "tsup --config tsup.config.mts",
+        "clean": "rm -rf dist",
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
         "lint:fix": "eslint '**/*.{js,jsx,ts,tsx}' --fix",
         "prettier": "prettier --check '**/*.{ts,tsx,js,mjs,cjs,jsx,json,yaml,yml}'",
@@ -31,13 +34,24 @@
         "md:fix": "markdownlint --fix '*.md'"
     },
     "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.28.0",
         "@naverpay/editorconfig": "^0.0.4",
         "@naverpay/eslint-config": "^2.3.0",
         "@naverpay/markdown-lint": "^0.0.3",
         "@naverpay/prettier-config": "^1.0.1",
+        "@rollup/plugin-babel": "^6.0.4",
         "@types/react": "^19.1.8",
+        "@vitejs/plugin-react": "^4.6.0",
+        "browserslist-to-esbuild": "^2.1.1",
+        "lefthook": "^1.12.1",
         "next": "^15.3.5",
-        "react": "^19.1.0"
+        "react": "^19.1.0",
+        "rollup-preserve-directives": "^1.1.3",
+        "tsup": "^8.5.0",
+        "typescript": "^5.8.3",
+        "vite": "^7.0.4",
+        "vite-plugin-dts": "^4.2.1",
+        "vite-tsconfig-paths": "^5.1.4"
     },
     "peerDependencies": {
         "next": "^13.0.0 || ^14.0.0",
@@ -51,7 +65,6 @@
     },
     "packageManager": "pnpm@9.7.0",
     "dependencies": {
-        "lefthook": "^1.12.1",
-        "typescript": "^5.8.3"
+        "core-js-pure": "^3.44.0"
     }
 }
