--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "scripts": {
         "build": "pnpm run clean && vite build --config vite.config.mts && pnpm run build:dts",
         "build:dts": "tsup --config tsup.config.mts",
+        "release": "changeset publish",
         "clean": "rm -rf dist",
         "test": "vitest run",
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
@@ -76,10 +77,12 @@
         "prettier": "prettier --check '**/*.{ts,tsx,js,mjs,cjs,jsx,json,yaml,yml}'",
         "prettier:fix": "prettier --write '**/*.{ts,tsx,js,mjs,cjs,jsx,json,yaml,yml}'",
         "md": "markdownlint '*.md'",
-        "md:fix": "markdownlint --fix '*.md'"
+        "md:fix": "markdownlint --fix '*.md'",
+        "changeset-version": "changeset version && pnpm run md:fix"
     },
     "devDependencies": {
         "@babel/plugin-transform-runtime": "^7.28.0",
+        "@changesets/cli": "^2.29.5",
         "@naverpay/editorconfig": "^0.0.4",
         "@naverpay/eslint-config": "^2.3.0",
         "@naverpay/markdown-lint": "^0.0.3",
