패키지명수정

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://json.schemastore.org/package",
-    "name": "react-image",
+    "name": "yunrap-react-image",
     "version": "0.1.1",
     "description": "A comprehensive image utility kit for Next.js, and React. This package is created for learning purposes. Caution is advised when using in production.",
     "main": "./dist/cjs/index.js",
