--- a/package.json
+++ b/package.json
@@ -93,9 +93,9 @@
         "@vitejs/plugin-react": "^4.6.0",
         "browserslist-to-esbuild": "^2.1.1",
         "lefthook": "^1.12.1",
-        "next": "^15.3.5",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "next": "^14.2.21",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "rollup-preserve-directives": "^1.1.3",
         "tsup": "^8.5.0",
         "typescript": "^5.4.2",
@@ -106,8 +106,8 @@
     },
     "peerDependencies": {
         "next": "^13.0.0 || ^14.0.0",
-        "react": "18.0.0",
-        "react-dom": "18.0.0"
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
     },
     "peerDependenciesMeta": {
         "next": {
